[package]
name = "among"
description = "Among Us game's protocol implimented in Rust programming language"
authors = ["Aldas <aldas@protonmail.com", "Austin <atmatm6000@outlook.com>"]
version = "1.0.0"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamemath = "0.4.0"
byteorder = "1.3.4"
enum-ordinalize = "3.1.8"
